iniciado html do projeto

--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,14 @@
   --slightly-transparent-white: hsla(0, 0%, 100%, 0.75); /* main paragraph */
   --slightly-transparent-white: hsla(0, 0%, 100%, 0.6); /* stat heading */
 }
+
+/*
+Get insights that help your business grow.
+
+  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+  experience, and overall efficiency.
+
+  10k+ companies
+  314 templates
+  12m+ queries
+*/
