--- a/css/style.css
+++ b/css/style.css
@@ -8,16 +8,95 @@
   /* Neutral */
   --white: hsl(0, 0%, 100%); /* main heading, stats */
   --slightly-transparent-white: hsla(0, 0%, 100%, 0.75); /* main paragraph */
-  --slightly-transparent-white: hsla(0, 0%, 100%, 0.6); /* stat heading */
+  --slightly-transparent-white-stat: hsla(0, 0%, 100%, 0.6); /* stat heading */
 }
 
-/*
-Get insights that help your business grow.
+/* FORMATAÇÕES GERAIS */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Inter;
+}
+body {
+  background-color: var(--very-dark-blue);
+}
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
+/* CLASSES & ID'S */
 
-  10k+ companies
-  314 templates
-  12m+ queries
-*/
+.card {
+  background-color: var(--dark-desaturated-blue);
+  max-width: 375px;
+  margin: 60px auto;
+  border-radius: 10px;
+}
+
+/* IMG CONTAINER */
+.img-container {
+  width: 100%;
+  height: 280px;
+  background-color: rgba(147, 17, 207, 0.699);
+  border-radius: 10px 10px 0 0;
+}
+.img {
+  width: 100%;
+  height: 100%;
+  background-image: url(../images/image-header-mobile.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: opacity(0.5);
+  border-radius: 10px 10px 0 0;
+}
+
+/* CONTENT CONTAINER */
+.violet {
+  color: var(--soft-violet);
+}
+
+.content-container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding: 30px;
+}
+.content-container h1 {
+  color: var(--white);
+  font-size: 1.9rem;
+  font-weight: 600;
+  line-height: 2.1rem;
+  letter-spacing: 0.1rem;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.content-container p {
+  color: var(--slightly-transparent-white-stat);
+  letter-spacing: 0.07rem;
+  line-height: 1.75rem;
+  margin-bottom: 40px;
+}
+
+/* STATS CONTAINER */
+
+.stats-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.stats-item {
+  display: flex;
+  flex-direction: column;
+}
+
+.numbers {
+  color: var(--white);
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 5px;
+}
+
+.name {
+  color: var(--slightly-transparent-white-stat);
+  letter-spacing: 0.1rem;
+  margin-bottom: 30px;
+}
