--- a/css/style.css
+++ b/css/style.css
@@ -18,35 +18,41 @@
   box-sizing: border-box;
   font-family: Inter;
 }
+
 body {
   background-color: var(--very-dark-blue);
 }
 
-/* CLASSES & ID'S */
+.attribution {
+  text-align: center;
+  color: var(--white);
+}
 
+/* CARD */
 .card {
   background-color: var(--dark-desaturated-blue);
-  max-width: 375px;
+  display: flex;
+  flex-direction: row-reverse;
+  max-width: 980px;
   margin: 60px auto;
   border-radius: 10px;
 }
 
 /* IMG CONTAINER */
 .img-container {
-  width: 100%;
-  height: 280px;
+  width: 45%;
   background-color: rgba(147, 17, 207, 0.699);
-  border-radius: 10px 10px 0 0;
+  border-radius: 0 10px 10px 0;
 }
 .img {
   width: 100%;
   height: 100%;
-  background-image: url(../images/image-header-mobile.jpg);
+  background-image: url(../images/image-header-desktop.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   filter: opacity(0.5);
-  border-radius: 10px 10px 0 0;
+  border-radius: 0 10px 10px 0;
 }
 
 /* CONTENT CONTAINER */
@@ -57,14 +63,15 @@ body {
 .content-container {
   display: flex;
   flex-direction: column;
-  text-align: center;
-  padding: 30px;
+  width: 55%;
+  text-align: left;
+  padding: 50px;
 }
 .content-container h1 {
   color: var(--white);
-  font-size: 1.9rem;
+  font-size: 2.2rem;
   font-weight: 600;
-  line-height: 2.1rem;
+  line-height: 2.6rem;
   letter-spacing: 0.1rem;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -77,15 +84,16 @@ body {
 }
 
 /* STATS CONTAINER */
-
 .stats-container {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  width: 75%;
 }
 
 .stats-item {
   display: flex;
   flex-direction: column;
+  padding: 10px;
 }
 
 .numbers {
@@ -99,4 +107,45 @@ body {
   color: var(--slightly-transparent-white-stat);
   letter-spacing: 0.1rem;
   margin-bottom: 30px;
+}
+
+/* MEDIA QUERIES
+********************************************/
+@media (max-width: 767px) {
+  /* CARD */
+  .card {
+    flex-direction: column;
+    max-width: 375px;
+  }
+
+  /* IMG CONTAINER */
+  .img-container {
+    width: 100%;
+    height: 280px;
+    border-radius: 10px 10px 0 0;
+  }
+  .img {
+    width: 100%;
+    height: 100%;
+    background-image: url(../images/image-header-mobile.jpg);
+    border-radius: 10px 10px 0 0;
+  }
+
+  /* CONTENT CONTAINER */
+  .content-container {
+    width: 100%;
+    flex-direction: column;
+    text-align: center;
+    padding: 30px;
+  }
+  .content-container h1 {
+    font-size: 1.9rem;
+    line-height: 2.1rem;
+  }
+
+  /* STATS CONTAINER */
+  .stats-container {
+    width: 100%;
+    flex-direction: column;
+  }
 }
